--- a/index.html
+++ b/index.html
@@ -473,21 +473,21 @@
               <li>Contuct Us</li>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-3 d-none d-md-block d-lg-block">
             <ul class="footer-list list-unstyled">
               <li>Audio Description</li>
               <li>investor Relations</li>
               <li>Legal Notices</li>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-3 d-none d-lg-block">
             <ul class="footer-list list-unstyled">
               <li>Help Center</li>
               <li>Jobs</li>
               <li>Cookies Preferences</li>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-3 d-none d-lg-block">
             <ul class="footer-list list-unstyled">
               <li>Gift Cards</li>
               <li>Terms of Use</li>
